fix: In Desktop view the navlinks were not aligned

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -25,6 +25,7 @@ $navbar-height: 5rem;
   height: 100%;
   justify-content: space-between;
   background-color: $white;
+  align-items: center;
 }
 
 #home-link {
@@ -115,6 +116,7 @@ $navbar-height: 5rem;
   .navbar-container {
     flex-direction: column;
     margin-top: $margin-sm;
+    align-items: unset;
   }
 
   .navbar-links {
